refactor(lines): mise à jour de l'acte de création des tranferts des lignes

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -992,12 +992,14 @@
       "selected": "{total} ligne(s) sélectionnée(s)",
       "total": "{total} ligne(s) trouvée(s)",
       "export": "Exporter {total} ligne(s)",
-      "step1Partner": "séléctionner un partenaire",
-      "billingAccount": "séléctionner un compte de facturation",
-      "step1File": "séléctionner un fichier de travail",
-      "step1Title": "séléctionner les lignes avec les filtres et le tableau",
+      "step1Partner": "Sélectionner un partenaire cible",
+      "billingAccount": "Sélectionner un compte de facturation",
+      "billingAccountTarget": "Sélectionner un compte de facturation cible",
+      "step1File": "Sélectionner un fichier de travail",
+      "step1Title": "Sélectionner les lignes avec les filtres et le tableau",
       "step2Title": "configurer le changement de compte de facturation",
-      "selectOffer": "sélectionner une offre",
+      "selectOffer": "Sélectionner une offre",
+      "selectOfferTarget": "Sélectionner une offre cible pour les lignes actives",
       "fileImport": {
         "foundLines": "lignes ont été trouvées",
         "foundSimcards": "lignes à importer",
