--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -387,6 +387,18 @@
       "DETAIL": "Voir   le détail du reporting",
       "ACTIVATION": "Activer  / Désactiver le rapport",
       "SEARCH": "Rechercher les rapports"
+    },
+    "creation": {
+      "chooseInfos": "Choisir les informations",
+      "chooseInfosDescription": "Choisissez dans les rubriques suivantes les informations de ligne que vous souhaitez faire apparaître dans votre rapport personnalisé. Vous pourrez ainsi filtrer et trier ces informations dans votre tableur préféré.",
+      "fromReport": "à partir d'un modèle du rapport",
+      "generateReport": "Générer un rapport",
+      "dataReport": "Données du rappot",
+      "nameReport": "Nom du rapport",
+      "fileFormat": "Format de ficher",
+      "list": "Liste de diffusion",
+      "dateGenerated": "Date de génération",
+      "dateAndRecursion": "Récurrence et date"
     }
   },
   "getparc": {
@@ -921,7 +933,7 @@
         "DATA_NOT_FOUND": "Introuvable",
         "NEW_DATA_ALREADY_EXISTS": "Ligne existante",
         "DATA_NOT_ACTIVATED": "Ligne non activée",
-        "DATA_WRONG_STATUS": "Status invalide",
+        "DATA_WRONG_STATUS": "Statut invalide",
         "DATA_NOT_AUTHORIZED": "Action non autorisée",
         "NEW_DATA_INVALID_FORMAT": "Format de la nouvelle valeur invalide",
         "EMPTY_FILE": "Fichier vide"
@@ -996,7 +1008,8 @@
       "selected": "{total} ligne(s) sélectionnée(s)",
       "total": "{total} ligne(s) trouvée(s)",
       "export": "Exporter {total} ligne(s)",
-      "step1Partner": "Sélectionner un partenaire cible",
+      "step1Partner": "Sélectionner un partenaire",
+      "partnerTarget": "Sélectionner un partenaire cible",
       "billingAccount": "Sélectionner un compte de facturation",
       "billingAccountTarget": "Sélectionner un compte de facturation cible",
       "step1File": "Sélectionner un fichier de travail",
