feat(gestion des utilisateurs): ajout du filtre par rôle

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -358,7 +358,8 @@
         "fullName": "Nom ou prénom",
         "email": "Email",
         "partnerGroup": "Groupe de partenaire",
-        "partners": "Partenaires"
+        "partners": "Partenaires",
+        "roles": "Rôles"
       },
       "total": "{total} utilisateur(s) trouvé(s)"
     },
