fix: ajout d'un gestionnaire d'erreur pour la création de rapport

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -400,6 +400,9 @@
       "list": "Liste de diffusion",
       "dateGenerated": "Date de génération",
       "dateAndRecursion": "Récurrence et date"
+    },
+    "errors": {
+      "AlreadyExists": "Un rapport avec ce nom existe déjà"
     }
   },
   "getparc": {
