feat création d'un utilisateur

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -80,7 +80,8 @@
     "DISABLE": "Désactiver",
     "ENABLE": "Activer",
     "DELETE": "Supprimer",
-    "DOWNLOAD": "Télécharger"
+    "DOWNLOAD": "Télécharger",
+    "MODIFY": "Modifier"
   },
   "home": {
     "customize": {
