FIX : Ajout du tooltip sur la page de users + alignement sur le sommaire de partner detail

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -308,7 +308,7 @@
   "getvsion": {
     "search-by-id": "Rechercher une alarme par identifiant",
     "manage-alarms": "Gestion des alarmes",
-    "manage-alarms-tooltip": "TODO description",
+    "manage-alarms-tooltip": "Cette page permet de rechercher un utilisateur.",
     "tab-1-parc-alarms": "Alarmes de parc",
     "tab-2-m2m-alarms": "Alarmes cockpit M2M",
     "alarm-detail": "Détail de l'alarme",
