feat: Création d'utilisateur

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -379,6 +379,11 @@
   },
   "getadmin": {
     "users": {
+      "userTypes": {
+        "bouygues": "Bouygues",
+        "partner": "partenaire",
+        "group": "compte groupe"
+      },
       "addAdmin": "Ajouter un administrateur",
       "addUser": "Ajouter un utilisateur",
       "title": "Gestion des utilisateurs",
