FEAT : Ajout de la page détail de compte

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -434,6 +434,43 @@
       "accountDescription": "Description du compte partenaire"
     },
     "partnerDetail": {
+      "generalInformations": "Informations générales",
+      "legalInformations": "Informations légales",
+      "contactDetail": "Coordonnées",
+      "created": "Créé le",
+      "lastModification": "Dernière modification",
+      "partnerName": "Raison social :",
+      "siren": "Numéro SIREN :",
+      "naf": "Code NAF :",
+      "tva": "TVA intra-communautaire :",
+      "tel": "Téléphone :",
+      "fax": "Fax (facultatif) :",
+      "address": "Adresse :",
+      "address2": "Complément :",
+      "code": "Code :",
+      "zipCode": "Code postal :",
+      "city": "Ville :",
+      "bscs": "Compte root BSCS :",
+      "contractReference": "Référence du contrat cadre :",
+      "contractDate": "Date du contrat :",
+      "contractExpiration": "Fin du contrat :",
+      "salesEngineer": "Ingénieur commercial :",
+      "commercialName": "Nom du commercial :",
+      "commercialEmail": "Email du commercial :",
+      "vpn": "VPN :",
+      "group": "Groupe :",
+      "contract": "contrat",
+      "partyGroup": "Compte groupe :",
+      "partnerTree": "Arborescence des partenaires :",
+      "partnerType": "Type de partenaire :",
+      "preActOffer": "Offre pré-activation :",
+      "preActGDM": "GDM pré-activation :",
+      "maxViews": "Nb max de vues :",
+      "workflow": "Workflow par défaut :",
+      "portabilityCode": "Code opérateur de portabilité :",
+      "state": "État (facultatif) :",
+      "update": "Mettre à jour  ",
+      "country": "Pays :",
       "ELEVEN": "11",
       "FIFTEEN": "15",
       "BOTH": "Tous",
