fix: limitation du nombre de caractères des adresses de livraison

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -185,7 +185,8 @@
       "special-error": "Une lettre avec accent ou un caractère spécial.",
       "number-error": "Le mot de passe doit contenir au moins un chiffre.",
       "email-error": "Veuillez saisir une adresse email valide"
-    }
+    },
+    "limitAddress": "Adresse limitée à 35 caractères"
   },
   "common": {
     "billing": "Facturation",
