FEAT : Ajout de la liste de comptes de facturation

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -1258,6 +1258,8 @@
     "creationDate": "Date de création",
     "orderDate": "Date de commande",
     "activationAsked": "Activation",
+    "company": "Société",
+    "label": "Libellé",
     "preActivationAsked": "Préactivation",
     "creator": "Créateur",
     "quantity": "Quantité",
@@ -1268,6 +1270,9 @@
     "externalId": "Ref. client",
     "massActionIds": "Id de gestion",
     "offer": "Offre",
+    "active": "Actif",
+    "locked": "Verouillé",
+    "closed": "Clos",
     "managementId": "Id gestion",
     "billingAccount": "Compte de facturation",
     "customFields": "Champ libre {num}",
