fix: gestion des rôles pour l'administration d'utilisateur

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -388,7 +388,7 @@
   "getadmin": {
     "users": {
       "userTypes": {
-        "bouygues": "Bouygues",
+        "bouygues": "Interne",
         "partner": "Partenaire",
         "group": "Compte groupe"
       },
