--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -505,6 +505,7 @@
       "ACTIVATION": "Activer  / Désactiver le rapport",
       "SEARCH": "Rechercher les rapports"
     },
+
     "creation": {
       "chooseInfos": "Choisir les informations",
       "chooseInfosDescription": "Choisissez dans les rubriques suivantes les informations de ligne que vous souhaitez faire apparaître dans votre rapport personnalisé. Vous pourrez ainsi filtrer et trier ces informations dans votre tableur préféré.",
@@ -518,7 +519,8 @@
       "dateAndRecursion": "Récurrence et date"
     },
     "errors": {
-      "AlreadyExists": "Un rapport avec ce nom existe déjà"
+      "AlreadyExists": "Un rapport avec ce nom existe déjà",
+      "partnerRequired": "Veuillez choisir un partenaire"
     }
   },
   "getparc": {
