FEAT : Modifier un compte de facturation

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -453,8 +453,10 @@
     "partnerDetail": {
       "generalInformations": "Informations générales",
       "legalInformations": "Informations légales",
+      "backToCF": "Retour à la liste des C.F.",
       "contactDetail": "Coordonnées",
       "created": "Créé le",
+      "blockAct": "Blocage des actes de gestion",
       "lastModification": "Dernière modification",
       "partnerName": "Raison social :",
       "siren": "Numéro SIREN :",
@@ -468,6 +470,8 @@
       "zipCode": "Code postal :",
       "city": "Ville :",
       "bscs": "Compte root BSCS :",
+      "label": "Libellé :",
+      "company": "Societé :",
       "contractReference": "Référence du contrat cadre :",
       "contractDate": "Date du contrat :",
       "contractExpiration": "Fin du contrat :",
