--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -506,7 +506,7 @@
       "group": "Groupe :",
       "contract": "contrat",
       "partyGroup": "Compte groupe :",
-      "selectPartyGroup": "Sélectionner un compte groupe :",
+      "selectPartyGroup": "Sélectionner un compte groupe",
       "partnerTree": "Arborescence des partenaires :",
       "partnerType": "Type de partenaire :",
       "preActOffer": "Offre pré-activation :",
