fix: correction du filtre groupe partenaire de la page gestion des partenaires

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -472,7 +472,8 @@
       "admins": "Administrateurs",
       "activityLog": "Journal d'activité",
       "options": "Options du partenaire",
-      "accountDescription": "Description du compte partenaire"
+      "accountDescription": "Description du compte partenaire",
+      "total": "{total} partenaire(s) trouvé(s)"
     },
     "partnerDetail": {
       "generalInformations": "Informations générales",
