fix: traduction du titre du graphe TOP5 Référnces Commerciales

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -334,7 +334,7 @@
     "graphes": {
       "title-graph-top5-manufacturers": "Top 5 Fabriquant",
       "title-graph-techno-repartition": "Nombre de lignes par techno",
-      "title-graph-top5-references": "Top 5 des Références Commerciales"
+      "title-graph-top5-references": "Top 5 Références Commerciales"
     }
   },
   "getvsion": {
