refactor: Filtre Créateur de la demande

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -1409,7 +1409,7 @@
     "offers": "Offres",
     "quantity": "Quantité",
     "customFields": "Champs libres",
-    "orderCreator": "Créateur de la commande",
+    "orderCreator": "Créateur de la demande",
     "active": "Activé",
     "deliveryCountry": "Pays de livraison",
     "postalCode": "Code postal",
