FIX: Ajout du click user sur la table actes de gestion avec panel

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -579,6 +579,7 @@
     }
   },
   "getparc": {
+    "user": "Utilisateur",
     "lines-sim-import": "Importer des cartes SIM",
     "management-act": "Historique des actes de gestion",
     "management-act-detail": "Historique des actes",
