--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -538,7 +538,12 @@
       "FIFTEEN": "15",
       "BOTH": "Tous",
       "adminForm": {
-        "title": "Formulaire admin"
+        "titles": {
+          "addMainAdmin": "Ajouter un administrateur principal",
+          "addSecondAdmin": "Ajouter un administrateur secondaire",
+          "modifyMainAdmin": "Modifier le profil administrateur principal",
+          "modifySecondAdmin": "Modifier le profil administrateur secondaire"
+        }
       },
       "offerFromPanel": {
         "title": "Panel Offre"
