feat: ajout de la permission pour configurer des utilisateurs

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -437,6 +437,7 @@
         "partner": "Partenaire",
         "group": "Compte groupe"
       },
+      "searchUser": "Rechercher un utilisateur",
       "simcards": "Cartes SIM",
       "supervision": "Options de supervision",
       "addAdmin": "Ajouter un administrateur",
