fix: correction facture getReport

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -163,7 +163,7 @@
     "modelReports": "Rapports",
     "createReports": "Gestion documentaires",
     "reportsDashboard": "Tableau de bord",
-    "reportsBill": "Facture",
+    "reportsBill": "Factures",
     "monitoring": "Supervision"
   },
   "users": {
