feat: filtres pour le cockpit M2M (partie front)

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -46,6 +46,7 @@
   "fromThe": "depuis le :",
   "loading": "Chargement",
   "display": "Affichage",
+  "types": "Types",
   "seeMore": "Voir plus",
   "MB": "{value} Mio",
   "MN": "{value} Mn",
