fix: correction de la création de rapports et de la traduction des noms d'alarme

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -807,7 +807,8 @@
           "STATUS_CHANGE": "Changement de statut",
           "SOLD_OVER_THRESHOLD": "Solde au-dessus du seuil",
           "SOLD_UNDER_THRESHOLD": "Solde sous seuil",
-          "UNDER_CONSUMPTION_VOLUME": "Sous-consommation"
+          "UNDER_CONSUMPTION_VOLUME": "Sous-consommation",
+          "ACTION": "Action"
         }
       },
       "consummated": {
