feat: filtre msisdn et IMEI

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -199,6 +199,8 @@
     "others": "Autres",
     "period": "Période",
 
+    "identifier": "Identifiant",
+
     "months_12": "12 Mois",
     "months_24": "24 Mois",
     "months_36": "36 Mois",
