--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -365,6 +365,7 @@
     "allUsages": "Usage data,SMS,Voix",
     "dataUsage": "Usage data",
     "m2mCockpit": "Cockpit M2M",
+    "exportGraph": "Exporter les données des graphes",
 
     "supervisionTypes": {
       "INTRA_DAY": "6h",
@@ -1434,6 +1435,7 @@
     "SMS": "SMS",
     "VOICE": "Voix"
   },
+
   "filters": {
     "idOrder": "ID de commande",
     "title": "FILTRES",
